--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogo de Ímpar ou Par</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="game-container">
+        <h1>Jogo de Ímpar ou Par</h1>
+        <p class="description">Escolha entre "Par" ou "Ímpar" e tente vencer o computador!</p>
+        <div class="buttons">
+            <button id="par" class="btn par">Par</button>
+            <button id="impar" class="btn impar">Ímpar</button>
+        </div>
+        <div class="result">
+            <p id="player-choice">Faça sua escolha!</p>
+            <p id="computer-choice"></p>
+            <p id="game-result"></p>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
 
