--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo de Ímpar ou Par</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Jogo de Ímpar ou Par (1 a 100)</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="game-container">
         <h1>Jogo de Ímpar ou Par</h1>
-        <p class="description">Escolha entre "Par" ou "Ímpar" e tente vencer o computador!</p>
+        <p class="description">Escolha entre "Par" ou "Ímpar" e tente acertar o número gerado entre 1 e 100!</p>
         <div class="buttons">
             <button id="par" class="btn par">Par</button>
             <button id="impar" class="btn impar">Ímpar</button>
@@ -23,4 +23,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
